# NUMAlloc-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
benches/: allocator_comparison.rs
docs/: architecture_design.md
examples/axum-bench/: Cargo.toml  README.md  bench.sh
examples/axum-bench/src/: main.rs
src/: allocator.rs  freelist.rs  heap.rs  lib.rs  node_heap.rs  platform.rs  size_class.rs  sys_box.rs  thread_heap.rs
tests/: global_allocator.rs  local_allocator.rs
