[package]
name = "axum-bench"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["system"]
numalloc = ["dep:numalloc"]
mimalloc = ["dep:mimalloc"]
system = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
numalloc = { path = "../..", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }
